--- a/package.json
+++ b/package.json
@@ -20,11 +20,6 @@
     "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "axios": "^0.25.0",
-    "base64url": "^3.0.1",
-    "jwk-to-pem": "^2.0.5"
-  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
     "eslint": "^8.8.0",
@@ -42,5 +37,8 @@
   "files": [
     "dist"
   ],
-  "private": false
+  "private": false,
+  "dependencies": {
+    "@kinde-oss/kinde-node-auth-utils": "^0.0.2"
+  }
 }
