--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kinde-oss/kinde-node-express-api",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Kinde JWT verification for Node Express APIs",
   "author": {
     "name": "Kinde",
@@ -13,7 +13,7 @@
   },
   "bugs": "https://github.com/kinde-oss/kinde-node-express-api",
   "homepage": "https://kinde.com",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "scripts": {
